--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,8 @@ img {
 }
 
 .insta {
+  position: relative;              /* 🔥 podremos moverlo en vertical */
+  top: -3px;                       /* súbelo 3px (ajuste fino) */
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 700;
@@ -349,6 +351,7 @@ img {
     grid-auto-rows: 220px;
   }
 }
+
 
 
 
